--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +16,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.robo-text {
+  margin: 50px 0;
+  text-align: center;
+  font-size: 50px;
+  background: -webkit-linear-gradient(#ff1a68, #94daff);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
